# RustPlayground

./: README.md
chat/: Cargo.toml  Server.Dockerfile
chat/client/: Cargo.toml
chat/client/src/: main.rs
chat/proto/: Cargo.toml  build.rs
chat/proto/proto/chat/: authentication_service.proto  message.proto  service.proto  user.proto
chat/server/: Cargo.toml
chat/server/src/: main.rs  user_list.rs
chat/server/src/services/: authentication_service.rs  chat_service.rs  mod.rs
chat/server/src/services/authentication_service/: mod.rs  service.rs
chat/server/src/services/chat_service/: mod.rs  service.rs  user_list.rs
chat/server/src/user_list/: mod.rs  user.rs  user_data.rs
chat/server/src/util/: drop_receiver.rs  mod.rs  response_stream.rs
grpc_playground/: Cargo.toml  Server.Dockerfile
grpc_playground/client/: Cargo.toml
grpc_playground/client/src/: main.rs
grpc_playground/proto/: Cargo.toml  build.rs
grpc_playground/proto/proto/hello/: hello.proto
grpc_playground/proto/proto/services/: bidirectional_streaming_service.proto  client_streaming_service.proto  server_streaming_service.proto  unary_service.proto
grpc_playground/proto/src/: lib.rs
grpc_playground/server/: Cargo.toml
grpc_playground/server/src/: hello.rs  main.rs
grpc_playground/server/src/services/: bidirectional_streaming_service.rs  client_streaming_service.rs  mod.rs  server_streaming_service.rs  unary_service.rs
traits/: Cargo.toml
traits/src/: main.rs
