[package]
name = "server"
version = "0.1.0"
authors = ["Norman Link <norman.link@gmx.net>"]
edition = "2018"

[dependencies]
proto = {path = "../proto"}
tonic = {version="0.3", features = ["tls"]}
tokio = {version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds", "signal"]}
futures = "0.3"
structopt = "0.3"
